# coollinearsolver

./: .gitignore  LICENSE  README-2.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: copilot-instructions.md
cool_linear_solver/: __init__.py  eqs_and_vars.py  least_squares.py  linear_programs.py  linear_solver.py  quadratic_problems.py  quicksolve.py
coollinearsolver/: __init__.py  main.py
examples/: con_least_squares_small.py  facility_location_mip.py  gramian.py  largematrixes.mat  least_squares_large.py  least_squares_small.py  mixed_integer_program.py  nash.py  potential_flow.py  raising.py  resistor_grid.py  resistor_network.py  system_of_eqs_flow.py  system_of_eqs_large.py  system_of_eqs_small.py  three-number-game.py  traveling_salesman_mip.py
test/: test_examples.py  test_least_squares.py  test_unsolvables.py
