
[tool.poetry]
name = "cool_linear_solver"
version = "0.2.0"
description = "An easy going (contrained) linear solver with sparse methods and minimal effort"
authors = ["Gerben I. Beintema"]
license = "BSD 3-Clause License"
readme = "README.md"
packages = [{include = "cool_linear_solver"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.25"
matplotlib = "*"
cloudpickle = "*"
qpsolvers = {version = "*", extras = ["osqp"]}
mpi = "*"
scipy = ">=1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
