[metadata]
name = cool_linear_solver
version = 0.1.2
author = Gerben Beintema
author_email = g.i.beintema@tue.nl
description = An easy going (contrained) linear solver with sparse methods and minimal effort
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GerbenBeintema/coollinearsolver
project_urls =
    Bug Tracker = https://github.com/GerbenBeintema/coollinearsolver/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    scipy
    numpy
    matplotlib
    qpsolvers

[options.packages.find]
exclude = examples
